binrw/tests/ui/non_blocking_errors.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`
 --> $DIR/non_blocking_errors.rs:7:6
  |
7 | #[br(invalid_keyword_struct)]
  |      ^^^^^^^^^^^^^^^^^^^^^^

error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `magic`, `args`, `args_raw`, `calc`, `default`, `ignore`, `parse_with`, `count`, `offset`, `offset_after`, `if`, `deref_now`, `postprocess_now`, `restore_position`, `try`, `temp`, `assert`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`
 --> $DIR/non_blocking_errors.rs:9:10
  |
9 |     #[br(invalid_keyword_struct_field_a)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `magic`, `args`, `args_raw`, `calc`, `default`, `ignore`, `parse_with`, `count`, `offset`, `offset_after`, `if`, `deref_now`, `postprocess_now`, `restore_position`, `try`, `temp`, `assert`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`
  --> $DIR/non_blocking_errors.rs:11:10
   |
11 |     #[br(invalid_keyword_struct_field_b)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
